# lidar_viewer

./: .gitignore  package-lock.json
app/: routes.ts
app/routes/: potree.tsx
app/welcome/: welcome.tsx
backend/: .gitignore  README.md  check.py  environment.yaml  ground.json  ground_hag.json  main.py  pyproject.toml  requirements.txt  schema.py  tree_classification.py
backend/services/: count_tree_service.py  pdal_service.py  potree_converter_service.py  tree_service.py  volume_service.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: routes.ts
frontend/app/component/: Classification.tsx  PotreeViewer.tsx
frontend/app/routes/: classification.tsx  conversion.tsx  potree-viewer.tsx  potree.tsx
frontend/app/welcome/: welcome.tsx
frontend/public/pointclouds/05c942ad-9af6-4f52-9916-cd52809f2de3/: job.json  log.txt  metadata.json
frontend/public/pointclouds/2ec541b9-7526-4f74-b427-5bf7df6e9dad/: job.json  log.txt  metadata.json
public/pointclouds/tes/: log.txt  metadata.json
