[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "laspy==2.7",
    "numpy==2.4.2",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.28",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
]
